# Medication-Management

./: .gitignore  Makefile  README.md  check_syntax.py  iv.yaml  pyproject.toml
docs/: Ricevuta_1.txt  Ricevuta_2.txt  gestor_dependencias.md  gestor_tareas.md  herramientas_test.md  milestones.md  pharmacy_receipt_1.txt  pharmacy_receipt_2.txt  user_journeys.md  user_stories.md
medication_management/: inventario.py  medicamento.py  ticket.py
src/: inventario.py  medicamento.py  ticket.py
test/: test_inventario.py  test_medicamento.py  test_ticket.py
