[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "medication_management"
version = "0.1.0"
description = "Sistema di gestione dei medicinali"
authors = ["Matteo Imbrosciano <matteo.imbrosciano16@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0"

[tool.poetry.dev-dependencies]