[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "medication_management"
version = "0.1.0"
description = "Sistema di gestione dei medicinali"
authors = ["Matteo Imbrosciano <matteo.imbrosciano16@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
poethepoet = "^0.15.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.31.1"

[tool.poe.tasks]
install = "poetry install"
check = "python -m py_compile medication_management/*.py"
format = "black ."
clean = "cmd /c \"del /s /q *.pyc & for /d %i in (__pycache__) do rmdir /s /q %i\""
